kubernetes-nginx/internal/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: asia-southeast1-docker.pkg.dev/cs3219-g5/cs3219-g5/chat:v1 # change this
        imagePullPolicy: IfNotPresent # setting local image
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  selector:
    app: chat
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8002
  type: NodePort
