kubernetes-nginx/internal/front-end-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
