kubernetes-nginx/internal/match.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match
  labels:
    app: match
spec:
  replicas: 1
  selector:
    matchLabels:
      app: match
  template:
    metadata:
      labels:
        app: match
    spec:
      containers:
      - name: match
        image: asia-southeast1-docker.pkg.dev/cs3219-g5/g5-repo/match:v1 # change this
        imagePullPolicy: IfNotPresent # setting local image
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: match
spec:
  selector:
    app: match
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8001
  type: NodePort
