kubernetes-nginx/internal/text.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text
  labels:
    app: text
spec:
  replicas: 1
  selector:
    matchLabels:
      app: text
  template:
    metadata:
      labels:
        app: text
    spec:
      containers:
      - name: text
        image: asia-southeast1-docker.pkg.dev/cs3219-g5/cs3219-g5-repo/text:v1 # change this
        imagePullPolicy: IfNotPresent # setting local image
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
        ports:
        - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: text
spec:
  selector:
    app: text
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3005
  type: NodePort
